crates/usfm_usx/tests/snapshots/reader__usx_reference_mismatch.snap
---
source: crates/usfm_usx/tests/reader.rs
description: "<usx version=\"3.0\"><book code=\"GEN\" style=\"id\"/><chapter number=\"1\" style=\"c\" sid=\"GEN 1\"/><para style=\"p\"><verse number=\"2\" style=\"v\" sid=\"GEN 1:3\"/>text<verse eid=\"GEN 1:2\"/></para><chapter eid=\"GEN 1\"/></usx>"
---
Book GEN "" @19..48
Para usfm@5..18
  Text "3.0"@14..17
ChapterStart 1@48..91
Para p@91..183
  VerseStart 2@107..150
  Text "text"@150..154
  VerseEnd 2
ChapterEnd 1
--- diagnostics
warning[usx-reference-mismatch] @140..147: `sid="GEN 1:3"` should be `GEN 1:2`
