crates/usfm_usx/tests/snapshots/reader__usx_unmatched.snap
---
source: crates/usfm_usx/tests/reader.rs
description: "<usx version=\"3.0\"><book code=\"GEN\" style=\"id\"/><chapter number=\"1\" style=\"c\" sid=\"GEN 1\"/><para style=\"p\">text<unmatched marker=\"add*\"/> more</para><chapter eid=\"GEN 1\"/></usx>"
---
Book GEN "" @19..48
Para usfm@5..18
  Text "3.0"@14..17
ChapterStart 1@48..91
Para p@91..149
  Text "text more"@107..142
ChapterEnd 1
--- diagnostics
error[usx-unmatched] @111..137: `<unmatched marker="add*">`: a closing marker that closed nothing; dropped
