crates/usfm_usx/tests/snapshots/reader__usx_verse_end_missing.snap
---
source: crates/usfm_usx/tests/reader.rs
description: "<usx version=\"3.0\"><book code=\"GEN\" style=\"id\"/><chapter number=\"1\" style=\"c\" sid=\"GEN 1\"/><para style=\"p\"><verse number=\"1\" style=\"v\" sid=\"GEN 1:1\"/>one <verse number=\"2\" style=\"v\" sid=\"GEN 1:2\"/>two<verse eid=\"GEN 1:2\"/></para><chapter eid=\"GEN 1\"/></usx>"
---
Book GEN "" @19..48
Para usfm@5..18
  Text "3.0"@14..17
ChapterStart 1@48..91
Para p@91..229
  VerseStart 1@107..150
  Text "one"@150..154
  VerseEnd 1
  Text " "
  VerseStart 2@154..197
  Text "two"@197..200
  VerseEnd 2
ChapterEnd 1
--- diagnostics
warning[usx-verse-end-missing] @107..150: verse `GEN 1:1` is never closed by an `eid`; it ends where the parser would end it
